# seda-wasm-vm

./: .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Dockerfile  Dockerfile.centos7  Makefile  README.md  assign_too_much_memory.wasm  assign_too_much_memory.wat  build_gnu_aarch64.sh  build_gnu_x86_64.sh  build_muslc.sh  debug.wasm  integration-test.wasm  metadata.json  null_byte_string.wasm  price-feed-playground.wasm  randomNumber.wasm  rust-toolchain.toml  simplePriceFeed.wasm  spam-fd-write.wasm  spam-fd-write.wat  test-vm.wasm  wasmer-tree.txt
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: manual.yml  pr.yml
bind_go/: bind.go  bind_test.go  go.mod  libseda_tally_vm.h
libtallyvm/: Cargo.toml  build.rs
libtallyvm/src/: errors.rs  lib.rs
mem-test/: .gitignore  README.md  go.mod  go.sum  import_length_overflow.json  main.go  monitor.py  price_feed_tally.json
runtime/common/: Cargo.toml
runtime/common/src/: chain_info.rs
runtime/core/: Cargo.toml  build.rs
runtime/core/src/: context.rs  errors.rs  lib.rs  memory.rs  metering.rs  resources_dir.rs  runtime.rs  runtime_context.rs  safe_wasi_imports.rs  vm.rs  vm_imports.rs  wasm_cache.rs
runtime/core/src/core_vm_imports/: call_result.rs  execution_result.rs  keccak256.rs  mod.rs  secp256_k1.rs
runtime/core/src/tally_vm_imports/: http_fetch.rs  mod.rs  proxy_http_fetch.rs
runtime/core/src/wasi_vm_imports/: args_get.rs  environ_get.rs  fd_write.rs  mod.rs
runtime/sdk/: Cargo.toml
runtime/sdk/src/: bytes.rs  bytes_tests.rs  errors.rs  events.rs  level.rs  lib.rs  p2p.rs  url.rs
runtime/sdk/src/promises/: actions.rs  http_action.rs  mod.rs  promise.rs  vm.rs
runtime/sdk/src/wasm/: action_error.rs  bn254.rs  chain_interactor.rs  database.rs  env.rs  execution.rs  http.rs  log.rs  memory.rs  mod.rs  p2p.rs  raw.rs  vm.rs  wasm_storage.rs
runtime/wasmer-middlewares/: Cargo.toml  README.md
runtime/wasmer-middlewares/src/: metering.rs
tallyvm/: Cargo.toml  bench_execution_test.go  bindings.h  build.rs  cbindgen.toml  execute.go  execute_test.go  go.mod  libseda_tally_vm.h  libwasmvm.h  link_glibclinux_aarch64.go  link_glibclinux_x86_64.go  link_mac.go  link_muslc_aarch64.go  link_muslc_x86_64.go
tallyvm/src/: lib.rs
test-vm/: Cargo.toml
test-vm/src/: call_result_write_0.rs  cannot_spam_call_result_write.rs  get_time.rs  import_length_overflow.rs  infinite_loop_wasi.rs  main.rs  memory_fill.rs  price_feed_tally.rs
test-wasm-files/: README.md  assign_too_much_memory.wasm  cache_misses.wasm  cache_misses.wat  integration-test.wasm  null_byte_string.wasm  randomNumber.wasm  stdout_null_bytes.wasm
xtask/: Cargo.toml
xtask/src/: main.rs
