[workspace]
resolver = "2"
default-members = ["libtallyvm"]
members = [
	"libtallyvm",
	"runtime/core",
	"runtime/wasmer-middlewares",
	"test-vm",
	"xtask",
	"test-vm",
]

[workspace.package]
rust-version = "1.82.0"
version = "2.5.0"

[profile.dev]
codegen-units = 512
opt-level = 1

[profile.release]
codegen-units = 1
incremental = true
lto = "thin"
panic = "abort"
strip = true
rpath = true

[workspace.dependencies]
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
cbindgen = "0.26"
hex = "0.4"
home = "0.5.5"
k256 = "0.13.3"
lazy_static = "1.4"
parking_lot = "0.12"
paste = "1.0"
rand = "0.8"
seda-wasm-vm = { path = "./runtime/core" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha3 = "0.10.8"
seahash = "4.1.0"
tempdir = "0.3"
thiserror = "1.0"
tokio = { version = "1.21", default-features = false }
tracing = { version = "0.1", features = ["log-always"] }
tracing-subscriber = "0.3"
tracing-appender = "0.2"
url = { version = "2.3", default-features = false }
wasmer = { version = "5.0.4", default-features = false }
wasmer-types = { version = "5.0.4" }
wasmer-middlewares = { path = "./runtime/wasmer-middlewares" }
wasmer-wasix = { version = "0.34.0", default-features = false, features = [
	"host-fs",
	"sys",
	"logging",
	"host-fs",
	"sys-thread",
	"sys-poll",
	"host-threads",
] }
which = "7.0"
xshell = "0.2"

seda-sdk-rs = { version = "1.0", default-features = false }
