[package]
name = "seda-tally-vm"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
seda-wasm-vm = { workspace = true }
thiserror = { workspace = true }
hex.workspace = true
seda-sdk-rs = { workspace = true }
tracing.workspace = true
tracing-appender.workspace = true

[build-dependencies]
cbindgen.workspace = true

[dev-dependencies]
seda-wasm-vm = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tempdir.workspace = true
