[package]
name = "seda-wasm-vm"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmer = { workspace = true }
wasmer-wasix = { workspace = true }