[package]
name = "seda-wasm-vm"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
hex = { workspace = true }
home = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmer = { workspace = true, features = ["singlepass"] }
wasmer-middlewares = { workspace = true }
wasmer-wasix = { workspace = true }
