[package]
name = "seda-wasm-vm"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
hex = { workspace = true }
home = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha3 = { workspace = true }
seahash = { workspace = true }
tempdir.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender.workspace = true
wasmer = { workspace = true, features = ["singlepass"] }
wasmer-middlewares = { workspace = true }
wasmer-wasix = { workspace = true }

[build-dependencies]
cargo_metadata = { version = "0.20" }
