[package]
name = "seda-runtime-sdk"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[features]
default = []
wasm = []
full = []

[dependencies]
bn254 = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
seda-common = { workspace = true }