[package]
name = "seda-runtime-sdk"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[features]
default = []
wasm = []
full = []

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
